--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-validator": "^5.3.0",
     "font-awesome": "^4.7.0",
     "mongoose": "^5.3.14",
+    "nodemon": "^1.18.7",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
